force-app/main/default/objects/Knowledge__kav/fields/Covering_as_a_Benefit_Attachment_Info__c.field-meta.xml
<CustomField>
    <fullName>Covering_as_a_Benefit_Attachment_Info__c</fullName>
    <label>Attachment Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>