force-app/main/default/objects/Knowledge__kav/fields/Covering_as_a_Benefit_Non_HHS_Link__c.field-meta.xml
<CustomField>
    <fullName>Covering_as_a_Benefit_Non_HHS_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the URL attached to the article is a link to a non-HHS link, this checkbox must be marked to add an icon next to the link for compliance</description>
    <label>Non-HHS Link</label>
    <type>Checkbox</type>
</CustomField>