force-app/main/default/objects/Knowledge__kav/fields/Covering_as_a_Benefit_Summary__c.field-meta.xml
<CustomField>
    <fullName>Covering_as_a_Benefit_Summary__c</fullName>
    <label>Resource Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>