force-app/main/default/objects/Knowledge__kav/fields/Covering_as_a_Benefit_URL__c.field-meta.xml
<CustomField>
    <fullName>Covering_as_a_Benefit_URL__c</fullName>
    <label>Resource URL</label>
    <type>Url</type>
</CustomField>