force-app/main/default/objects/Knowledge__kav/fields/HE_Keyword__c.field-meta.xml
<CustomField>
    <fullName>HE_Keyword__c</fullName>
    <label>HE Keyword</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>