force-app/main/default/objects/Knowledge__kav/fields/Linked_Topics__c.field-meta.xml
<CustomField>
    <fullName>Linked_Topics__c</fullName>
    <label>Linked Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Community_Topics</valueSetName>
    </valueSet>
</CustomField>