force-app/main/default/objects/Knowledge__kav/recordTypes/Covering_as_a_Benefit.recordType-meta.xml
<RecordType>
    <fullName>Covering_as_a_Benefit</fullName>
    <active>true</active>
    <label>Covering_as_a_Benefit</label>
</RecordType>