force-app/main/default/objects/Knowledge__kav/recordTypes/Data_Reporting_for_the_Lifestyle_Change.recordType-meta.xml
<RecordType>
    <fullName>Data_Reporting_for_the_Lifestyle_Change</fullName>
    <active>true</active>
    <label>Data_Reporting_for_the_Lifestyle_Change</label>
</RecordType>