force-app/main/default/objects/Knowledge__kav/recordTypes/Delivering_the_Lifestyle_Change_Program.recordType-meta.xml
<RecordType>
    <fullName>Delivering_the_Lifestyle_Change_Program</fullName>
    <active>true</active>
    <label>Delivering_the_Lifestyle_Change_Program</label>
</RecordType>