force-app/main/default/objects/Knowledge__kav/recordTypes/Internal_Articles.recordType-meta.xml
<RecordType>
    <fullName>Internal_Articles</fullName>
    <active>true</active>
    <label>Internal_Articles</label>
</RecordType>