force-app/main/default/objects/Knowledge__kav/recordTypes/Learning_About_the_National_DPP.recordType-meta.xml
<RecordType>
    <fullName>Learning_About_the_National_DPP</fullName>
    <active>true</active>
    <label>Learning_About_the_National_DPP</label>
</RecordType>