force-app/main/default/objects/Knowledge__kav/recordTypes/Lifestyle_Coach_Training_and_Practice.recordType-meta.xml
<RecordType>
    <fullName>Lifestyle_Coach_Training_and_Practice</fullName>
    <active>true</active>
    <label>Lifestyle_Coach_Training_and_Practice</label>
</RecordType>