force-app/main/default/objects/Knowledge__kav/recordTypes/Marketing_and_Recruitment_for_NDPP.recordType-meta.xml
<RecordType>
    <fullName>Marketing_and_Recruitment_for_NDPP</fullName>
    <active>true</active>
    <label>Marketing_and_Recruitment_for_NDPP</label>
</RecordType>