force-app/main/default/objects/Knowledge__kav/recordTypes/Receiving_and_Maintaining_CDC_Recognitio.recordType-meta.xml
<RecordType>
    <fullName>Receiving_and_Maintaining_CDC_Recognitio</fullName>
    <active>true</active>
    <label>Receiving_and_Maintaining_CDC_Recognitio</label>
</RecordType>