force-app/main/default/objects/Knowledge__kav/recordTypes/Screening_and_Referral.recordType-meta.xml
<RecordType>
    <fullName>Screening_and_Referral</fullName>
    <active>true</active>
    <label>Screening_and_Referral</label>
</RecordType>